Apply webfont and fix spacing

--- a/styles.css
+++ b/styles.css
@@ -1,30 +1,32 @@
+@import url('https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@400;500&display=swap');
+
 h4 {
-    margin: 0.1rem 0 0 0;
+    margin: -0.1rem 0 0 0;
     width: 12rem;
-    white-space: nowrap;
 }
 
 ul {
     margin: 0.3rem 0 0 0.8rem;
-    padding: 0 0.5rem 0.3rem 0.8rem;
+    padding: 0 0.8rem 0.5rem 0.8rem;
     list-style: none;
     display: none;
 }
 
 li {
-    margin: 0.5rem 0 0 0;
+    margin: 0.4rem 0 0 0;
 }
 
 #main-area {
     width: 14.6rem;
     height: auto;
     margin: 1.5rem auto;
+    font-family: 'Noto Sans KR', sans-serif;
 }
 
 .connect-line {
     background: green;
     width: 0.3rem;
-    height: 46.2rem;
+    height: 46.9rem;
     position: absolute;
     z-index: -999;
     margin-left: 0.5rem;
@@ -34,6 +36,7 @@ li {
     display: flex;
     flex-wrap: wrap;
     margin-top: 1.4rem;
+    white-space: nowrap;
 }
 
 .bus-station-icon {
